# secure-mqtt-library

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: smqtt_aead.h  smqtt_broker.h  smqtt_client.h  smqtt_common.h
include/smqtt/: broker.h  client.h  common.h
internal/: smqtt_aead.c  smqtt_aead.h  smqtt_protocol.h
lib/common/: smqtt_conf.h  smqtt_protocol.h
samples/client/: main.c
samples/smoqer/: main.c
src/: broker.c  client.c  common.c  smqtt_broker.c  smqtt_client.c  smqtt_common.c
tests/: architecture_bm.c  encryption_bm.c
